# libnavigation

./: Makefile.am  configure.ac  navigation.pc.in
debian/: changelog  control  libnavigation-dev.install  libnavigation-doc.install  libnavigation0.install  rules
doc/: Makefile.am  libnavigation-docs.sgml  libnavigation-sections.txt  libnavigation.types
navigation/: Makefile.am  libnavigation.schemas  navigation-provider-enums.h  navigation-provider.c  navigation-provider.h  navigation-provider.xml
